# KIEP

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
crates/kiep-api/: Cargo.toml
crates/kiep-api/src/: main.rs
crates/kiep-api/src/routes/: companies.rs  complexes.rs  geo.rs  health.rs  mod.rs  regions.rs
crates/kiep-cli/: Cargo.toml
crates/kiep-cli/src/: main.rs
crates/kiep-core/: Cargo.toml
crates/kiep-core/src/: config.rs  error.rs  models.rs
crates/kiep-etl/: Cargo.toml
crates/kiep-etl/src/: lib.rs
crates/kiep-etl/src/clients/: common.rs  fsc.rs  kicox.rs  mod.rs  nps.rs  nts.rs  pps.rs
crates/kiep-etl/src/load/: postgres.rs
crates/kiep-etl/src/transform/: health_score.rs  mod.rs  normalize.rs
docs/: data-sources-v02.md
mcp/kiep-analytics/: README.md  claude_desktop_config.json  pyproject.toml  server.py
scripts/: fetch-data.mjs  generate-expanded-data.mjs  generate-historical.mjs
sql/: 001_init.sql
web/: package-lock.json  package.json  tailwind.config.ts  vercel.json
web/public/data/: airports.json  industrial-complexes.json  major-roads.json  ports.json  railways.json  regions.json  sample-historical.json  sample-regions.json  subway-lines.json
web/scripts/: fetch-real-data.js  generate-complexes.js  generate-sample-data.js  generate_roads.py
web/scripts/api/: datagokr.js  ecos.js  kosis.js  rone.js
web/scripts/lib/: cache.js  config.js  fallback.js
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/analysis/: page.tsx
web/src/app/company/: page.tsx
web/src/app/compare/: page.tsx
web/src/app/complex/: page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/rankings/: page.tsx
web/src/components/Layout/: Header.tsx  HelpModal.tsx  Legend.tsx  MapControls.tsx  Navigation.tsx  RegionRanking.tsx  Sidebar.tsx  TimelineControls.tsx
web/src/components/Map/: KoreaMap.tsx
web/src/components/Nav/: GlobalNav.tsx
web/src/lib/: constants.ts  types.ts
