[package]
name = "kiep-cli"
version.workspace = true
edition.workspace = true

[dependencies]
kiep-core = { path = "../kiep-core" }
kiep-etl = { path = "../kiep-etl" }
tokio = { workspace = true }
clap = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
