[package]
name = "kiep-etl"
version.workspace = true
edition.workspace = true

[dependencies]
kiep-core = { path = "../kiep-core" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
